@@ -4,7 +4,7 @@
       "Luc Didry <luc@didry.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Minilla/v3.1.4, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Minilla/v3.1.10, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "perl_5"
    ],
@@ -36,7 +36,7 @@
             "Devel::Cover" : "0",
             "Test::CPAN::Meta" : "0",
             "Test::MinimumVersion::Fast" : "0.04",
-            "Test::PAUSE::Permissions" : "0.04",
+            "Test::PAUSE::Permissions" : "0.07",
             "Test::Pod" : "1.41",
             "Test::Spellunker" : "v0.2.7"
          }
@@ -56,10 +56,11 @@
    "release_status" : "unstable",
    "resources" : {
       "repository" : {
-         "url" : "https://framagit.org/luc/iso-639_1.git"
+         "type" : "git",
+         "url" : "git://framagit.org/fiat-tux/perl-modules/iso-639_1.git"
       }
    },
-   "version" : "0.03",
+   "version" : "0.04",
    "x_serialization_backend" : "JSON::PP version 2.97001",
    "x_static_install" : 1
 }
