@@ -16,6 +16,10 @@ ISO::639\_1 - ISO 639-1 Language informations
     print get_iso639_1('fr-BE')->{nativeName}; # Français (BE)
     print get_iso639_1('ur')->{nativeName};    # اردو
 
+    print get_iso639_1_from_639_2('fra')->{nativeName};     # Français
+    print get_iso639_1_from_name('french')->{nativeName};   # Français
+    print get_iso639_1_from_native_name('français')->{name} # French
+
 # DESCRIPTION
 
 ISO::639\_1 provides informations about a language from its ISO639-1 code.
@@ -45,9 +49,51 @@ ISO::639\_1 exports the following methods:
                appended to the name and nativeName informations (like "Français (BE)").
                Localization must be separated from the language code by "-" or "_".
 
+## get\_iso639\_1\_from\_639\_2
+
+    Usage    : get_iso639_1_from_639_2('fra')
+    Returns  : a hashref providing the informations described below. May return undef if no language is found.
+              {
+                  "639-1"      => "zu",          # ISO 639-1 code
+                  "639-2"      => "zul",         # ISO 639-2 code
+                  "family"     => "Niger–Congo", # family of language
+                  "name"       => "Zulu",        # english name of the language
+                  "nativeName" => "isiZulu",     # native name of the language
+                  "wikiUrl"    => "https://en.wikipedia.org/wiki/Zulu_language" # wikipedia URL about the language
+              }
+    Argument : an ISO639-2 code (case insensitive)
+
+## get\_iso639\_1\_from\_name
+
+    Usage    : get_iso639_1_from_name('French')
+    Returns  : a hashref providing the informations described below. May return undef if no language is found.
+              {
+                  "639-1"      => "zu",          # ISO 639-1 code
+                  "639-2"      => "zul",         # ISO 639-2 code
+                  "family"     => "Niger–Congo", # family of language
+                  "name"       => "Zulu",        # english name of the language
+                  "nativeName" => "isiZulu",     # native name of the language
+                  "wikiUrl"    => "https://en.wikipedia.org/wiki/Zulu_language" # wikipedia URL about the language
+              }
+    Argument : the english name of a language (case insensitive)
+
+## get\_iso639\_1\_from\_native\_name
+
+    Usage    : get_iso639_1_from_native_name('Français')
+    Returns  : a hashref providing the informations described below. May return undef if no language is found.
+              {
+                  "639-1"      => "zu",          # ISO 639-1 code
+                  "639-2"      => "zul",         # ISO 639-2 code
+                  "family"     => "Niger–Congo", # family of language
+                  "name"       => "Zulu",        # english name of the language
+                  "nativeName" => "isiZulu",     # native name of the language
+                  "wikiUrl"    => "https://en.wikipedia.org/wiki/Zulu_language" # wikipedia URL about the language
+              }
+    Argument : the native name of a language (case insensitive)
+
 # INSTALL
 
-After getting the tarball on https://metacpan.org/release/ISO::639\_1, untar it, go to the directory and:
+After getting the tarball on [https://metacpan.org/release/ISO::639\_1](https://metacpan.org/release/ISO::639_1), untar it, go to the directory and:
 
     perl Build.PL
     ./Build
