@@ -2,6 +2,8 @@ Revision history for Perl extension ISO::639_1
 
 {{$NEXT}}
 
+    - Allow to get infos from 639-2 code, name or native name
+
 0.03 2019-06-13T11:31:10Z
 
     - Update repository URLs
